--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForClaimant.njk
@@ -44,11 +44,21 @@
     {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
       <h2 class="heading-small">{{ t('The defendant has offered to pay by {{ paymentDate }}.',
           { defendantName: defendantName, paymentDate: paymentDate }) }}</h2>
-      <p>{{ t('You can accept or reject their offer.') }}</p>
+
+      {% if claim.claimData.defendant.isBusiness() %}
+        <p>{{ t('They’ll send you their financial details. You can use these to decide whether to to accept or reject their offer') }}</p>
+      {% else %}
+        <p>{{ t('You can accept or reject their offer.') }}</p>
+      {% endif %}
+
       {{ viewAndRespondOffer(claim) }}
     {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
       <h2 class="heading-small">{{ t('The defendant has offered to pay in instalments') }}</h2>
-      <p>{{ t('You can accept or reject their offer.') }}</p>
+      {% if claim.claimData.defendant.isBusiness() %}
+        <p>{{ t('They’ll send you their financial details. You can use these to decide whether to to accept or reject their offer') }}</p>
+      {% else %}
+        <p>{{ t('You can accept or reject their offer.') }}</p>
+      {% endif %}
       {{ viewAndRespondOffer(claim) }}
     {% endif %}
   </div>
