--- a/src/main/features/claimant-response/views/accept-payment-method.njk
+++ b/src/main/features/claimant-response/views/accept-payment-method.njk
@@ -25,6 +25,9 @@
           }}
         {% endif %}
 
+        {% if claim.claimData.defendant.isBusiness() %}
+          {% set hint = 'The defendant should have sent you their financial details. You’ll need to send them to us. We’ll issue a CCJ against them. The terms of the CCJ will depend on whether we believe they can afford your suggested repayment plan.' %}
+        {% endif %}
         {{
         radioGroupWithHintPanel(
           form = form,
@@ -40,7 +43,8 @@
           {
             label: 'No - I’ll suggest my own',
             value: YesNoOption.NO.option,
-            checked: (form.valueFor('accept') === YesNoOption.NO)
+            checked: (form.valueFor('accept') === YesNoOption.NO),
+            hint: hint
           }
         ]
         )
