--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -63,7 +63,7 @@
   settlementAgreementSignedByClaimantDefendantDashboard,
   settlementAgreementSignedByBothDefendantDashboard,
   settlementAgreementRejectedForDefendantDashboard %}
-{% from "./claimStatus/claimantResponse.njk" import claimantRejectedDefendantAsCompanyOrOrganisationResponse %}
+{% from "./claimStatus/claimantResponse.njk" import claimantWithDefendantAsBusinessResponse %}
 
 {% from "./claimStatus/redeterminationRequestedDefendant.njk" import redeterminationDefendantDashboard %}
 {% from "./claimStatus/redeterminationRequestedClaimant.njk" import redeterminationClaimantDashboard %}
@@ -125,6 +125,10 @@
     {{ claimantRejectedDefendantAsCompanyOrOrganisationResponse() }}
   {% elif status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
     {{ partAdmitRejectedByClaimantDashboard(claim) }}
+    {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
+    {{ claimantWithDefendantAsBusinessResponse() }}
+    {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_PART_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
+    {{ claimantWithDefendantAsBusinessResponse() }}
   {% elif status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
     {{ settlementAgreementRejectedForClaimantDashboard(claim) }}
   {% elif status === ClaimStatus.PART_ADMIT_PAY_IMMEDIATELY %}
@@ -184,6 +188,11 @@
     {{ partAdmittedClaimantAcceptsDefendantDashboard(claim) }}
   {% elif status === ClaimStatus.OFFER_SETTLEMENT_REACHED
     or status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
+  {{ offerSettlementReachedDashboard() }}
+  {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
+  {{  claimFullAdmissionForDefendantDashboard(claim) }}
+  {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_PART_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
+  {{ claimPartAdmittedToOweForDefendantDashboard(claim) }}
     {{ offerSettlementReachedDashboard() }}
   {% elif status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
     {{ settlementAgreementRejectedForDefendantDashboard() }}
