--- a/src/main/features/claim/views/defendant-individual-details.njk
+++ b/src/main/features/claim/views/defendant-individual-details.njk
@@ -14,6 +14,7 @@
     <div class="column-two-thirds">
       <form method="post" novalidate>
         {{ csrfProtection(csrf) }}
+        <p>{{ t('You’ll have to pay an extra fee if you later want to change the name of anyone involved with the claim.') }}</p>
 
         {{
           partyDetailsFragment(
@@ -23,7 +24,8 @@
             ],
             addressSection = {
               heading: 'Their postal address',
-              hint: 'You must enter the defendant’s postal address to make a claim against them. The address must be in England or Wales.',
+              hint: 'The address must be in England or Wales. Your claim may be invalid if you use the wrong address.',
+              secondHint: 'You must enter their usual or last known home address. You cannot use their work address.',
               name: 'address',
               postcodeLookup: true
             },
