ROC-4640: Claimant response journey bugs (#1272)
* fixed wrong data issue in settlement agreement section

* fixed amount issue when disposable income is higher than claim amount

* fixed issue when defendant setdate and claimant instalments court offer issue

--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -96,8 +96,10 @@
 
     {% set courtDetermination = draft.courtDetermination %}
     {% set courtDecisionPaymentIntention = courtDetermination.courtDecision %}
+    {% set courtDecisionType = courtDetermination.decisionType %}
 
-    {% if courtDetermination and courtDecisionPaymentIntention %}
+    {% if courtDetermination and courtDecisionPaymentIntention and
+      ( courtDecisionType !== DecisionType.CLAIMANT and courtDecisionType !== DecisionType.CLAIMANT_IN_FAVOUR_OF_DEFENDANT ) %}
       {{ tableStart('courtDecision', 'Court decision') }}
         {{ row(
         label = 'Court decision',
