--- a/src/main/common/components/payment-intention/payment-date.njk
+++ b/src/main/common/components/payment-intention/payment-date.njk
@@ -14,6 +14,10 @@
           </div>
         {% endif %}
 
+        {% if featureToggles.testingSupport %}
+          <p>Disposable Income value: {{ disposableIncome }}</p>
+        {% endif %}
+
         {{ dateInput(form = form, name = 'date', hint = t('For example, {{ nextMonth }}', { nextMonth : 'now' | addDays(30) | inputDate })) }}
 
         {{ saveAndContinueButton() }}
