--- a/src/main/features/claimant-response/views/payment-plan.njk
+++ b/src/main/features/claimant-response/views/payment-plan.njk
@@ -14,6 +14,10 @@
 
     <p>{{ t('Total claim amount is {{ totalAmount }}.', { totalAmount: totalAmount | numeral }) }} </p>
 
+    {% if featureToggles.testingSupport %}
+      <p>Disposable Income value: {{ disposableIncome }}</p>
+    {% endif %}
+
     <form method="post" novalidate class="payment-plan-calculation">
       {{ csrfProtection(csrf) }}
 
