Check for value before sending it to the front end

--- a/src/main/common/components/payment-intention/payment-date.njk
+++ b/src/main/common/components/payment-intention/payment-date.njk
@@ -14,7 +14,7 @@
           </div>
         {% endif %}
 
-        {% if featureToggles.testingSupport %}
+        {% if featureToggles.testingSupport and disposableIncome !== undefined %}
           <p>Disposable Income value: {{ disposableIncome }}</p>
         {% endif %}
 
