--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
@@ -1,4 +1,4 @@
-{% from "form.njk" import csrfProtection, submitButton %}
+{% from "form.njk" import csrfProtection, submitButton, linkButton %}
 {% from "internalLink.njk" import internalLink %}
 {% from "./utilityMacros.njk" import downloadAgreementLink %}
 {% from "./paidInFullClaimant.njk" import paidInFullClaimantButtonClaimDetails %}
@@ -70,6 +70,7 @@
 {% endmacro %}
 
 {% macro settlementAgreementRejectedClaimantClaimDetails(claim, csrf) %}
+  <div class="status-block">
     <h2 class="heading-small">{{ t('The defendant has rejected your settlement agreement') }}</h2>
     <p>{{ t('You can request a County Court Judgment (CCJ) against them based on the repayment plan shown in the agreement.') }}</p>
     <p>{{ t('The court will make an order requiring them to pay the money. It does not guarantee that they pay
@@ -77,8 +78,9 @@
     <p>{{ t('{{ defendantName }} can still sign the settlement agreement until you request a CCJ.', { defendantName: claim.claimData.defendant.name }) }}</p>
       <form novalidate method="post">
         {{ csrfProtection(csrf) }}
-        {{ submitButton('Request a County Court Judgment') }}
-      </form>
+        {{ linkButton('Request a County Court Judgment (CCJ)', '', 'button button-secondary') }}
+        </form>
+  </div>
 {% endmacro %}
 
 {% macro requestCCJ(claim) %}
