Update content to be clear it is for test use only

--- a/src/main/common/components/payment-intention/payment-date.njk
+++ b/src/main/common/components/payment-intention/payment-date.njk
@@ -15,7 +15,7 @@
         {% endif %}
 
         {% if featureToggles.testingSupport and disposableIncome !== undefined %}
-          <p>Disposable Income value: {{ disposableIncome }}</p>
+          <p>For testing use only: Disposable Income value: {{ disposableIncome }}</p>
         {% endif %}
 
         {{ dateInput(form = form, name = 'date', hint = t('For example, {{ nextMonth }}', { nextMonth : 'now' | addDays(30) | inputDate })) }}
