--- a/src/main/features/claimant-response/views/payment-plan.njk
+++ b/src/main/features/claimant-response/views/payment-plan.njk
@@ -14,8 +14,8 @@
 
     <p>{{ t('Total claim amount is {{ totalAmount }}.', { totalAmount: totalAmount | numeral }) }} </p>
 
-    {% if featureToggles.testingSupport and disposableIncome %}
-      <p>Disposable Income value: {{ disposableIncome }}</p>
+    {% if featureToggles.testingSupport and disposableIncome !== undefined %}
+      <p>For testing use only: Disposable Income value: {{ disposableIncome }}</p>
     {% endif %}
 
     <form method="post" novalidate class="payment-plan-calculation">
