ROC-4567: Fixed introduced by other story

--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmittedDefendant.njk
@@ -23,7 +23,7 @@
   </div>
 {% endmacro %}
 
-{% macro claimPartAdmittedToOweForDefendantDashboard(claim) %}
+{% macro claimPartAdmittedToOweForDefendantDashboard() %}
   {{ t('You’ve admitted part of the claim.') }}
 {% endmacro %}
 
