--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -144,11 +144,11 @@ claimFullAdmissionForClaimantClaimDetails,
     {% elif state.status === ClaimStatus.OFFER_SETTLEMENT_REACHED %}
       {{ offerSettlementReachedForClaimant(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_AS_BUSINESS_RESPONSE %}
-      {{ claimantRejectedDefendantAsCompanyOrOrganisationResponse(claim) }}
-    {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
-      {{ claimantWithDefendantAsBusinessResponse() }}
-    {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_PART_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
-      {{ claimantWithDefendantAsBusinessResponse() }}
+      {{ claimantWithDefendantAsBusinessResponseDetailedStatus(claim) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
+      {{ claimantWithDefendantAsBusinessResponseDetailedStatus(claim) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_PART_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
+      {{ claimantWithDefendantAsBusinessResponseDetailedStatus(claim) }}
     {% elif state.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
       {{ requestCCJ(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
@@ -220,9 +220,9 @@ claimFullAdmissionForClaimantClaimDetails,
         {{ offerSettlementReachedForDefendant(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
         {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
-      {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
+      {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
         {{ claimFullAdmissionForDefendantDashboard(claim) }}
-      {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_PART_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
+      {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_PART_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
         {{ claimPartAdmittedToOweForDefendantDashboard(claim) }}
       {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
         {{ settlementAgreementRejectedDefendantClaimDetails(claim) }}
