--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -21,6 +21,7 @@ ccjRequestedForDefendantClaimDetails %}
 {% from "./claimStatus/claimPartAdmittedDefendant.njk" import
   claimPartAdmittedToOweForDefendantClaimDetails,
   claimPartAdmittedAlreadyPaidForDefendantClaimDetails,
+  claimPartAdmittedToOweForDefendantDashboard,
   partAdmittedAcceptedPayImmediatelyDefendantClaimDetails %}
 
 {% from "./claimStatus/claimPartAdmissionClaimant.njk" import
@@ -155,6 +156,8 @@ claimFullAdmissionForClaimantClaimDetails,
       {{ partAdmitRejectedByClaimantClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
       {{ settlementAgreementRejectedClaimantClaimDetails(claim, csrf) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_AS_BUSINESS_RESPONSE_WITH_MEDIATION %}
+      {{ partAdmitRejectedByClaimantClaimDetails(claim) }}
     {% endif %}
   {% endfor %}
 {% endmacro %}
@@ -223,7 +226,7 @@ claimFullAdmissionForClaimantClaimDetails,
       {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
         {{ claimFullAdmissionForDefendantDashboard(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_PART_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
-        {{ claimPartAdmittedToOweForDefendantDashboard(claim) }}
+        {{ claimPartAdmittedToOweForDefendantDashboard() }}
       {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
         {{ settlementAgreementRejectedDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.PART_ADMIT_PAY_IMMEDIATELY %}
