--- a/src/main/features/dashboard/views/macro/claimStatus/redeterminationRequestedClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/redeterminationRequestedClaimant.njk
@@ -4,7 +4,8 @@
 
 {% macro redeterminationClaimantClaimDetails(claim) %}
   <div class="status-block">
-    {% if claim.reDetermination.partyType === MadeBy.CLAIMANT %}
+    {% if claim.reDetermination.partyType === MadeBy.CLAIMANT
+    or claim.isInterlocutoryJudgmentRequestedOnFullAdmission() %}
       <h2 class="heading-small">{{ t('Awaiting judge’s review') }}</h2>
       <p>{{ t('You’ve rejected the defendant’s repayment plan and an alternative plan suggested by the court.') }}</p>
       <p>{{ t('A County Court Judgment has been issued against the defendant.') }}</p>
