Address review comments

--- a/src/main/features/mediation/views/free-mediation.njk
+++ b/src/main/features/mediation/views/free-mediation.njk
@@ -12,7 +12,7 @@
       <ul class="list list-bullet">
         <li>{{ t('avoid a long wait for the claim to be resolved') }}</li>
         <li>{{ t('avoid a court hearing, which can last a whole day') }}</li>
-        <li>{{ t('avoid a County Court Judgement') }}</li>
+        <li>{{ t('avoid a County Court Judgment') }}</li>
         </li>
       </ul>
 
