--- a/src/main/features/dashboard/views/macro/claimStatus/paidInFullClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/paidInFullClaimant.njk
@@ -26,15 +26,18 @@
 {% endmacro %}
 
 {% macro paidInFullClaimantClaimSettledDetails(claim) %}
+  {% set defendantName: claim.claimData.defendant.name %}
+  {% set moneyReceivedOn: claim.moneyReceivedOn | date %}
+
   <h2 class="heading-small">{{ t('This claim is settled') }}</h2>
     {% if claim.response.amount %}
         <p>{{ t('{{ defendantName }} paid you {{ amount }} on {{ moneyReceivedOn }}.',
-            { defendantName: claim.claimData.defendant.name, amount: claim.response.amount | numeral,
-              moneyReceivedOn: claim.moneyReceivedOn | date }) }}</p>
+            { defendantName: defendantName, amount: claim.response.amount | numeral,
+              moneyReceivedOn: moneyReceivedOn }) }}</p>
     {% else %}
       <p>{{ t('{{ defendantName }} paid you {{ totalAmountTillToday }} on {{ moneyReceivedOn }}.',
-        { defendantName: claim.claimData.defendant.name, totalAmountTillToday: claim.totalAmountTillToday | numeral,
-          moneyReceivedOn: claim.moneyReceivedOn | date }) }}</p>
+        { defendantName: defendantName, totalAmountTillToday: claim.totalAmountTillToday | numeral,
+          moneyReceivedOn: moneyReceivedOn }) }}</p>
     {% endif %}
 {% endmacro %}
 
