--- a/src/main/features/testing-support/views/delete-drafts.njk
+++ b/src/main/features/testing-support/views/delete-drafts.njk
@@ -22,6 +22,9 @@
         <div class="notice">
           {{ linkButton('Delete claimant response drafts', 'action[claimantResponse]', 'button button-secondary') }}
         </div>
+        <div class="notice">
+          {{ linkButton('Delete mediation drafts', 'action[mediation]', 'button button-secondary') }}
+        </div>
       </form>
     </div>
   </div>
