--- a/src/main/features/claim/views/macro/about-claim-widget.njk
+++ b/src/main/features/claim/views/macro/about-claim-widget.njk
@@ -1,15 +1,15 @@
 {% from "internalLink.njk" import internalLink %}
 
-{% macro aboutClaimWidget(party, claim, showResponse = true) %}
+{% macro aboutClaimWidget(otherParty, claim, showResponse = true) %}
 
-{% if party === 'defendant' %}
+{% if otherParty === 'defendant' %}
   {% set otherPartyLabel = 'Defendant name:' %}
   {% set otherPartyName = claim.claimData.defendant.name %}
-  {% set responseLabel = 'Your response:' %}
-{% elseif party === 'claimant' %}
+  {% set responseLabel = 'Defendant response:' %}
+{% elseif otherParty === 'claimant' %}
   {% set otherPartyLabel = 'Claimant name:' %}
   {% set otherPartyName = claim.claimData.claimant.name %}
-  {% set responseLabel = 'Defendant response:' %}
+  {% set responseLabel = 'Your response:' %}
 {% endif %}
 
 <div class="about-claim-widget">
