--- a/src/main/features/dashboard/views/claimant.njk
+++ b/src/main/features/dashboard/views/claimant.njk
@@ -29,7 +29,7 @@
 
     {% if claim %}
       <div class="column-one-third">
-        {{ aboutClaimWidget(claim = claim, party = 'defendant') }}
+        {{ aboutClaimWidget(claim = claim, otherParty = 'defendant') }}
       </div>
     {% endif %}
   </div>
