--- a/src/main/views/macro/financialDetails.njk
+++ b/src/main/views/macro/financialDetails.njk
@@ -140,7 +140,7 @@
     {% else %}
       {{ row(label = loop.index0 + 1 + '. Debt' , value = debt.type | renderPriorityDebtType | capitalize) }}
     {% endif %}
-    {{ row(label = 'Total owed', value = debt.amount | numeral, bottomBorder = loop.index0 === debts.length - 1) }}
+    {{ row(label = 'Payments', value = (debt.amount | numeral) + ' ' + (debt.frequency | renderPaymentFrequencyView | lower) , bottomBorder = loop.index0 === debts.length - 1) }}
   {% endfor %}
 {% endmacro %}
 
