revert variable name change and update route tests

--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -44,7 +44,7 @@
         {{
         row(
           label = 'Will you try free mediation?',
-          value = t(mediationDraft.willYouOptOutOfMediation.option) | capitalize,
+          value = t(mediationDraft.willYouTryMediation.option) | capitalize,
           changeLink = MediationPaths.willYouTryMediation.evaluateUri({ externalId: claim.externalId }),
           bold = true
         )
