--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -74,10 +74,21 @@
 
 {% from "./claimStatus/breachOfPaymentDefendant.njk" import CCJAfterBreakingSettlementAgreementClaimDetails %}
 
+{% from "./claimStatus/statesPaidClaimant.njk" import
+  statesPaidAcceptedClaimantDashboard,
+  statesPaidRejectedClaimantDashboard %}
+{% from "./claimStatus/statesPaidDefendant.njk" import
+  statesPaidRejectedDefendantDashboard,
+  statesPaidAcceptedDefendantDashboard %}
+
 
 {% macro caseStatusForClaimant(status, claim) %}
   {% if status === ClaimStatus.PAID_IN_FULL or status === ClaimStatus.PAID_IN_FULL_CCJ_CANCELLED or status === ClaimStatus.PAID_IN_FULL_CCJ_SATISFIED %}
     {{ paidInFullClaimantDashboard() }}
+  {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_STATES_PAID %}
+     {{ statesPaidAcceptedClaimantDashboard() }}
+  {% elif status === ClaimStatus.CLAIMANT_REJECTED_STATES_PAID %}
+    {{ statesPaidRejectedClaimantDashboard() }}
   {% elif status === ClaimStatus.NO_RESPONSE %}
     {{ noResponseForClaimantDashboard() }}
   {% elif status === ClaimStatus.MORE_TIME_REQUESTED %}
@@ -144,6 +155,10 @@
 {% macro caseStatusForDefendant(status, claim) %}
   {% if status === ClaimStatus.PAID_IN_FULL %}
     {{ paidInFullDefendantDashboard() }}
+  {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_STATES_PAID %}
+    {{ statesPaidAcceptedDefendantDashboard() }}
+  {% elif status === ClaimStatus.CLAIMANT_REJECTED_STATES_PAID %}
+    {{ statesPaidRejectedDefendantDashboard(claim) }}
   {% elif status === ClaimStatus.PAID_IN_FULL_CCJ_CANCELLED or status === ClaimStatus.PAID_IN_FULL_CCJ_SATISFIED %}
     {{ paidInFullCancelledOrSatisfiedDefendantDashboard(claim) }}
   {% elif status === ClaimStatus.NO_RESPONSE %}
